# Apiscore

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/proid/apiscore/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CircularBuffer.cpp  CircularBuffer.h  FixedPoint.h  FrequencyAnalyzer.cpp  FrequencyAnalyzer.h  MicrophoneRecorder2.cpp  MicrophoneRecorder2.h  Music.h  MusicNote.cpp  MusicNote.h  PointerSwitcher.cpp  PointerSwitcher.h  ScoreRecorder.cpp  ScoreRecorder.h  native-lib.cpp
app/src/main/cpp/microphone/: MicrophoneRecorder.cpp
app/src/main/cpp/music/: MusicNote.h  MusicScore.cpp  MusicScore.h  Note.h  NotePitch.cpp  NotePitch.h  NoteValue.cpp  NoteValue.h  Pitch.cpp  Pitch.h  Rest.h  Score.cpp  Score.h  Tempo.cpp  Tempo.h  TimeSignature.cpp  TimeSignature.h  Value.cpp  Value.h  ValuedEntity.h
app/src/main/cpp/spectrum/: SampledSpectrumDefinition.cpp  SampledSpectrumDefinition.h  Spectrum.cpp  Spectrum.h  SpectrumDefinition.cpp  SpectrumDefinition.h  SpectrumFilter.h  SpectrumHistory.cpp  SpectrumHistory.h
app/src/main/cpp/spectrum/filters/: MeanNoiseRemoval.cpp  MeanNoiseRemoval.h  NonMaxSuppression.cpp  NonMaxSuppression.h
app/src/main/java/com/proid/apiscore/: MainActivity.java  MicrophoneRecorder.java
app/src/main/java/com/proid/apiscore/music/: Note.java  Renderer.java  Rest.java  Staff.java  Valued.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/proid/apiscore/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
